Project(YUNI-SAMPLES CXX)

CMake_minimum_required(VERSION 2.6)

IF(POLICY CMP0011)
	CMake_Policy(SET CMP0011 NEW)
ENDIF(POLICY CMP0011)


Message(STATUS "")
Message(STATUS "Samples")
Message(STATUS "")


Include("${CMAKE_CURRENT_SOURCE_DIR}/../CommonSettings.cmake")
Include("${CMAKE_CURRENT_SOURCE_DIR}/../Modules.cmake")
Include("${CMAKE_CURRENT_SOURCE_DIR}/../FindYuni.cmake")


ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(colors)
ADD_SUBDIRECTORY(devices)
ADD_SUBDIRECTORY(events)
ADD_SUBDIRECTORY(hash)
ADD_SUBDIRECTORY(logs)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(script)
ADD_SUBDIRECTORY(threads)
#ADD_SUBDIRECTORY(ui)

